added comments to non-tests, and fixed minor errors